# local-tts

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  create-containers.sh  pyproject.toml  run-prod-all-gpus.sh  runner_api.sh  runner_client.sh  toy_download_and_run_tts.py
.devcontainer/: devcontainer.json
app/api/: config.py  device.py  main.py  schemas.py  voice_store.py
app/api/services/: model_service.py
app/ui/: api_client.py  streamlit_app.py
docker/: start-api.sh  start-ui.sh  supervisord.conf
docs/: qwen3-tts-agent-readme.md
docs/plans/: 2026-02-28-qwen3-tts-streamlit-container-design.md  2026-02-28-qwen3-tts-streamlit-implementation-plan.md
docs/superpowers/plans/: 2026-03-12-docker-dev-prod-model-cache.md
local_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_bootstrap_imports.py
tests/api/: test_config.py  test_device.py  test_health.py  test_model_service.py  test_synthesize.py  test_validation_limits.py  test_voices.py
tests/docs/: test_model_cache_docs.py
tests/integration/: test_container_smoke.py  test_end_to_end.py
tests/ui/: test_api_client.py
