[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "uvicorn",
  "streamlit",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "pytest",
]
